# weather_forecast

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  forecast.cpp  forecast.h
